--- a/.github/workflows/deploy-function-app.yml
+++ b/.github/workflows/deploy-function-app.yml
@@ -15,7 +15,7 @@ on:
 
 env:
   AZURE_FUNCTIONAPP_NAME: mxe21v2
-  AZURE_FUNCTIONAPP_PACKAGE_PATH: "function-go/src"
+  AZURE_FUNCTIONAPP_PACKAGE_PATH: "./function-go"
   GO_VERSION: "1.16"
 
 jobs:
