--- a/.github/workflows/deploy-function-app.yml
+++ b/.github/workflows/deploy-function-app.yml
@@ -28,16 +28,7 @@ jobs:
     environment: dev
     steps:
       - name: "Checkout GitHub Action"
-        uses: actions/checkout@master
-
-      - name: Setup Go
-        uses: actions/setup-go@v5
-        with:
-          go-version: ${{ env.GO_VERSION }}
-
-      - name: Build
-        run: go build -ldflags="-s -w" -o main .
-        working-directory: function-go/src
+        uses: actions/checkout@v4
 
       - name: "Login"
         uses: azure/login@v2
@@ -55,7 +46,16 @@ jobs:
           template: ./bicep/main.bicep
           parameters: ./bicep/main.parameters.json
 
-      - name: "Deploy Functions"
+      - name: Setup Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: ${{ env.GO_VERSION }}
+
+      - name: Build app
+        run: go build -ldflags="-s -w" -o main .
+        working-directory: function-go/src
+
+      - name: Deploy Function
         uses: Azure/functions-action@v1
         id: fa
         with:
