--- a/.github/workflows/deploy-function-app.yml
+++ b/.github/workflows/deploy-function-app.yml
@@ -16,11 +16,9 @@ on:
   workflow_dispatch:
 
 env:
-  AZURE_FUNCTIONAPP_NAME: mxe21v2
-  AZURE_FUNCTIONAPP_PACKAGE_PATH: "./function-go"
   DEPLOYMENTNAME: "azfunc-${{ github.run_id }}"
   RESOURCEGROUPNAME: "mxe21"
-  GO_VERSION: "1.19" # Azure functions does not support newer as of now
+  AZURE_FUNCTIONAPP_NAME: mxe21v2
 
 jobs:
   build-and-deploy:
@@ -49,7 +47,7 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v5
         with:
-          go-version: ${{ env.GO_VERSION }}
+          go-version: "1.19" # Azure functions does not support newer as of now
 
       - name: Build app
         run: go build -ldflags="-s -w" -o main .
@@ -60,4 +58,4 @@ jobs:
         id: fa
         with:
           app-name: ${{ env.AZURE_FUNCTIONAPP_NAME }}
-          package: ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
+          package: "./function-go"
